first version list

--- a/src/pages/UserList/styles.css
+++ b/src/pages/UserList/styles.css
@@ -1,30 +1,94 @@
 .container {
   display: flex;
-  width: 70%;
+  flex: 1;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   min-height: 100%;
 }
-
-.contentRow {
+.wrapperFilters {
+  width: 76%;
   display: flex;
-  flex: 1;
-  flex-direction: row;
-  align-items: center;
-  border-radius: 10px;
-  background: #ffffff;
+  flex-direction: column;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  padding: 24px;
+
+  background: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  padding: 10px;
-  height: 79px;
+  border-radius: 10px;
 }
 
-.imageProfile {
-  border-radius: 50%;
-  height: 50px;
+.rowFilters{
+  display: flex;
+  justify-content: space-between;
+}
+
+.table-users{
+  width: 80%;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.imageProfile{
   width: 50px;
-  margin-right: 20px;
+  height: 50px;
+  border-radius: 50%;
+} 
+
+.table-users th{
+  text-align: left;
+
+  font-weight: bold;
+  color: #212529;
 }
 
-.contentFilters {
-  margin-bottom: 29px;
+.table-users th, td > p{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.table-users th, td{
+  width: 18%;
+  height: 50px;
+}
+
+.table-users tr:hover td{
+  background-color: #f2f2f2;
+}
+
+.badge{
+  border-radius: 5px;
+  width: 60px;
+  height: 26;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.badge p {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+}
+
+.title{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+  
+  color: #000000;
+}
+
+.line{
+  border: 1px solid #CCCCCC;
+  margin-bottom: 24px;
 }
