--- a/src/components/Loader/styles.css
+++ b/src/components/Loader/styles.css
@@ -1,4 +1,4 @@
-.wrapper{
+.wrapper {
   min-width: 100%;
   min-height: 100%;
   display: flex;
@@ -9,8 +9,8 @@
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid blue;
-  border-bottom: 16px solid blue;
+  border-top: 16px solid #eb8023;
+  border-bottom: 16px solid #eb8023;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
@@ -18,11 +18,19 @@
 }
 
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
