--- a/src/components/FormField/styles.css
+++ b/src/components/FormField/styles.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  margin-top: 10px;
 }
 
 .label{
@@ -10,7 +11,7 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 19px;
-  
+  margin-bottom: 5px;
   color: #212529;
 }
 
