--- a/src/pages/UserList/styles.css
+++ b/src/pages/UserList/styles.css
@@ -7,7 +7,7 @@
   min-height: 100%;
 }
 .wrapperFilters {
-  width: 76%;
+  width:80%;
   display: flex;
   flex-direction: column;
   margin-bottom: 50px;
@@ -24,11 +24,42 @@
   justify-content: space-between;
 }
 
-.table-users{
+.rowUsers{
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.headerUsers{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.registerButton{
+  background: #3C5DAA;
+  border-radius: 10px;
+  outline: inherit;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  cursor: pointer;
+  color: #FFFFFF;
+
+  height: 40px;
+}
+
+.contentUsers{
   width: 80%;
   background: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+  padding: 24px;
 }
 
 .imageProfile{
@@ -52,7 +83,7 @@
 }
 
 .table-users th, td{
-  width: 18%;
+  width: 19%;
   height: 50px;
 }
 
