--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -1,11 +1,51 @@
+* {
+  box-sizing: border-box;
+  font-family: Roboto, Arial, sans-serif;
+  color: #212529;
+}
+
 body {
-  background: #f5f5f5;
+  margin: 0;
+  background-color: #f5f5f5;
 }
 
 button {
   cursor: pointer;
 }
 
-button:hover {
-  opacity: 0.7;
+.container {
+  max-width: 1200px;
+  margin: 48px auto;
+}
+
+.card {
+  width: 100%;
+  margin-bottom: 48px;
+  padding: 24px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-color: #ffffff;
+}
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #cccccc;
+}
+
+.card-header h2 {
+  margin: 0;
+  font-size: 24px;
+}
+
+.form-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-row div + div {
+  margin-left: 16px;
 }
