--- a/src/pages/UserList/styles.css
+++ b/src/pages/UserList/styles.css
@@ -1,44 +1,31 @@
-.container {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100%;
-}
 .wrapperFilters {
-  width:80%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   margin-bottom: 50px;
   margin-top: 50px;
   padding: 24px;
 
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
 
-.rowFilters{
-  display: flex;
-  justify-content: space-between;
-}
-
-.rowUsers{
+.rowUsers {
   display: flex;
   flex: 1;
   justify-content: space-between;
   align-items: center;
 }
 
-.headerUsers{
+.headerUsers {
   display: flex;
   flex-direction: column;
   flex: 1;
 }
 
-.registerButton{
-  background: #3C5DAA;
+.registerButton {
+  background: #3c5daa;
   border-radius: 10px;
   outline: inherit;
 
@@ -49,49 +36,43 @@
   line-height: 19px;
   text-align: center;
   cursor: pointer;
-  color: #FFFFFF;
+  color: #ffffff;
 
   height: 40px;
 }
 
-.contentUsers{
-  width: 80%;
-  background: #FFFFFF;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  padding: 24px;
-}
-
-.imageProfile{
+.imageProfile {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-} 
+}
 
-.table-users th{
+.table-users th {
   text-align: left;
 
   font-weight: bold;
   color: #212529;
 }
 
-.table-users th, td > p{
+.table-users th,
+td > p {
   font-family: 'Roboto';
   font-style: normal;
   font-size: 16px;
   line-height: 19px;
 }
 
-.table-users th, td{
+.table-users th,
+td {
   width: 19%;
   height: 50px;
 }
 
-.table-users tr:hover td{
+.table-users tr:hover td {
   background-color: #f2f2f2;
 }
 
-.badge{
+.badge {
   border-radius: 5px;
   width: 60px;
   height: 26;
@@ -109,17 +90,17 @@
   text-align: center;
 }
 
-.title{
+.title {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
   line-height: 28px;
-  
+
   color: #000000;
 }
 
-.line{
-  border: 1px solid #CCCCCC;
+.line {
+  border: 1px solid #cccccc;
   margin-bottom: 24px;
 }
