--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -22,6 +22,21 @@ header {
   border-bottom: 2px solid #eb8023;
 }
 
+label {
+  margin-bottom: 8px;
+  font-weight: 500;
+}
+
+input,
+select {
+  width: 100%;
+  padding: 12px;
+  border-radius: 5px;
+  border: 1px solid #cccccc;
+  background-color: #ffffff;
+  font-size: 16px;
+}
+
 .header-content {
   flex: 1;
   max-width: 1200px;
