--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -10,7 +10,17 @@ body {
 }
 
 button {
+  min-width: 120px;
+  border: 0;
+  padding: 12px 20px;
+  border-radius: 10px;
+  font-size: 16px;
   cursor: pointer;
+}
+
+.primary-button {
+  background-color: #3c5daa;
+  color: #ffffff;
 }
 
 header {
@@ -25,6 +35,20 @@ header {
 label {
   margin-bottom: 8px;
   font-weight: 500;
+}
+
+.imageProfile {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+table {
+  width: 100%;
+}
+
+th {
+  text-align: left;
 }
 
 input,
@@ -83,4 +107,20 @@ select {
 
 .form-row div + div {
   margin-left: 16px;
+}
+
+.badge {
+  padding: 8px 16px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.active-badge {
+  background-color: #c9f7f5;
+  color: #1bc5bd;
+}
+
+.inactive-badge {
+  background-color: #ffe2e5;
+  color: #f64e60;
 }
